# python-cybersecurity-learning-path

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_QUICK_START.md  SECURITY.md  capstone_README.md  requirements.txt
.github/workflows/: static.yml
audience-docs/: README.md  capstone_README.md  employer_README.md  instructor_notes.md  interview_talking_points.md  learner_overview.md
capstone/: .env.example  .gitignore  README.md
capstone/.github/workflows/: ci.yml
capstone/stages/stage_01/: README.md
docs/: INSTRUCTOR_PORTFOLIO_NOTES.md  Instructor_Guide_Applied_Python_v1_0.docx  LEARNER_PROGRESS_CHECKLIST.md  START_HERE.md  Stage_01_Foundations_Setup.docx  Stage_02_Functions_Data_Structures.docx  Stage_03_Files_Automation_CLI.docx  Stage_04_APIs_Networking_Data_Integration.docx  Stage_05_Testing_Packaging_CI_Documentation.docx  Stage_06_Capstone_Project.docx  Student_Guide_Applied_Python_v1_0.docx  index.html
docs/assets/: learning-path-diagram.md
stage-starters/Stage_04_APIs_Networking_Data_Integration/.cache/: currency%7Cbase%3DUSD%7Csymbols%3DEUR%2CJPY.json
stage-starters/Stage_04_APIs_Networking_Data_Integration/app/: main.py
stage-starters/Stage_04_APIs_Networking_Data_Integration/data/: sample.json
stage-starters/stage-starters/stage_06_Capstone_Project/: .gitignore  README.md  pyproject.toml
stage-starters/stage-starters/stage_06_Capstone_Project/.github/workflows/: ci.yml
stage-starters/stage-starters/stage_06_Capstone_Project/src/: cli.py  detection.py  reports.py
stage-starters/stage-starters/stage_06_Capstone_Project/tests/: test_cache.py  test_reports.py
stage-starters/stage_01/: README.md
stage-starters/stage_01/app/: main.py
stage-starters/stage_01_Foundations_Setup/: README.md
stage-starters/stage_01_Foundations_Setup/app/: main.py
stage-starters/stage_02/: README.md
stage-starters/stage_02/app/: main.py
stage-starters/stage_02_Functions_Data_Structures/: README.md
stage-starters/stage_02_Functions_Data_Structures/app/: main.py
stage-starters/stage_03/: README.md
stage-starters/stage_03/app/: main.py
stage-starters/stage_03_Files_Automation_CLI/: README.md
stage-starters/stage_04/: README.md
stage-starters/stage_04_APIs_Networking_Data_Integration/: README.md
stage-starters/stage_05/: README.md  pyproject.toml
stage-starters/stage_05/.github/workflows/: ci.yml
stage-starters/stage_05/app/: main.py
stage-starters/stage_05/tests/: test_basic.py  test_http_mocking.py
stage-starters/stage_05_Testing_Packaging_CI_Documentation/: README.md
stage-starters/stage_06/: README.md  pyproject.toml
stage-starters/stage_06/app/: main.py
stage-starters/stage_06/tests/: test_opso.py
(+21 files in other folders)
