[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stage5_tool"
version = "0.1.0"
description = "Stage 5 packaging example"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
stage5-tool = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
