[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opso_tool"
version = "0.1.0"
description = "OpsOps - Capstone automation and reporting CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
opso = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
